--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <h2>Unlock 10% Off Your First Visit</h2>
                 <p style="color: rgba(255,255,255,0.9); margin-top: 15px;">Join Grace's Inner Circle for exclusive beauty tips, priority booking access, and private event invitations.</p>
                 
-                <form class="newsletter-form" action="PASTE_YOUR_MAILCHIMP_LINK_HERE" method="post" target="_blank">
+                <form class="newsletter-form" action="https://strathmore.us4.list-manage.com/subscribe/post?u=a87340d0e65f7285ee1627c0b&amp;id=3cdb74e02b&amp;f_id=00305ae9f0" method="post" target="_blank">
                     <input type="email" placeholder="Your Email Address" required>
                     <button type="submit" class="btn" style="border: 1px solid white; background: white; color: var(--color-emerald);">Subscribe</button>
                 </form>
@@ -407,4 +407,5 @@
         });
     </script>
 </body>
+
 </html>
