Change Mailchimp link in newsletter.html
Updated Mailchimp form action URL for newsletter signup.

--- a/newsletter.html
+++ b/newsletter.html
@@ -77,7 +77,7 @@
         <h1>Your Invitation to Luxury.</h1>
         <p>Join Grace's "Inner Circle" for expert beauty advice, priority booking access, and an immediate <strong>10% OFF</strong> discount code for your first product order.</p>
 
-        <form action="PASTE_YOUR_MAILCHIMP_LINK_HERE" method="post" target="_blank">
+        <form action="https://strathmore.us4.list-manage.com/subscribe/post?u=a87340d0e65f7285ee1627c0b&amp;id=3cdb74e02b&amp;f_id=00305ae9f0" method="post" target="_blank">
             <div class="mc-field-group">
                 <input type="email" value="" name="EMAIL" placeholder="Enter your email address..." required>
             </div>
@@ -88,4 +88,5 @@
     </div>
 
 </body>
+
 </html>
